plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.5'
//     id 'checkstyle'
    id 'jacoco'
    id 'org.sonarqube' version '3.4.0.2513'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter:2.7.5'
    implementation 'org.springframework.boot:spring-boot-starter-tomcat:2.7.5'
    implementation 'org.springframework.boot:spring-boot-autoconfigure:2.7.5'
    implementation 'org.springframework.boot:spring-boot-starter-web:2.7.5'
    implementation 'org.springframework.boot:spring-boot-starter-actuator:2.7.5'
    implementation 'org.jsoup:jsoup:1.14.3'
    implementation 'commons-codec:commons-codec:1.6'
    implementation 'commons-io:commons-io:2.7'
    implementation 'commons-logging:commons-logging:1.1.3'
    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
    implementation 'org.apache.httpcomponents:httpcore:4.4.6'
    implementation 'oauth.signpost:signpost-core:1.2.1.2'
    implementation 'oauth.signpost:signpost-commonshttp4:1.2'
    implementation 'org.apache.commons:commons-lang3:3.9'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.5'
    testImplementation 'io.rest-assured:rest-assured:3.3.0'
    compileOnly 'com.newrelic.agent.java:newrelic-java:7.11.0'
}

testing {
    suites {
        test {
            useJUnitJupiter('5.8.2')
        }
    }
}

test {
    finalizedBy jacocoTestReport, javadoc
}

jacocoTestReport {
    reports {
        xml.required = true
        dependsOn test
    }
}

jar {
     baseName = 'helpingfriendlybook'
     version =  '2.0.0'
 }

javadoc {
     source = sourceSets.main.allJava
     options {
        addStringOption('Xdoclint:none', '-quiet')
     }
 }

sonarqube {
    properties {
        property 'sonar.projectName', 'helping-friendly-book'
        property 'sonar.login', 'admin'
        property 'sonar.password', 'password'
    }
}

gradleEnterprise {
     buildScan {
         termsOfServiceUrl = 'https://gradle.com/terms-of-service'
         termsOfServiceAgree = 'yes'
         publishAlways()
     }
}

java.sourceCompatibility = 17